# 2d_detection

./: .gitignore  Dockerfile  README.md  nvidia_smi_log.txt  record.sh  test.py
install/detections_2d/lib/detections_2d/: batch_2d  old_batch  serialized
install/detections_2d/share/detections_2d/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/detections_2d/share/detections_2d/launch/: all.launch.py  batch_2d.launch.py  old_batch.launch.py  serialized.launch.py
log/: latest_build
src/: setup.cfg  setup.py
src/detections_2d/detections_2d/: package.xml  setup.py
src/detections_2d/detections_2d/detections_2d/: batch_2d.py  setup.cfg  setup.py  single_2d.py  tensor_rt.py
src/detections_2d/detections_2d/detections_2d/launch/: serialized.launch.py
src/detections_2d/detections_2d/launch/: batch_2d.launch.py  single_2d.launch.py  tensor_rt.launch.py
src/golfcart_yolo2d/: package.xml  setup.py
src/golfcart_yolo2d/launch/: all.launch.py  detec2d_batch.launch.py
src/golfcart_yolo2d/launch/install/: local_setup.sh  setup.sh
src/golfcart_yolo2d/launch/log/: latest_build
src/golfcart_yolo2d/prob trash/install/: local_setup.sh  setup.sh
src/golfcart_yolo2d/prob trash/log/: latest_build
src/launch/: all.launch.py  detec2d_batch.launch.py  yolo12_2d_detector.launch.py
yolo12n_openvino_model/: metadata.yaml  yolo12n.xml
